--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --text-color: #191970;
-    --card-front-color: #000000;
+    --text-color: #000000;
+    --card-front-color: #FFFFFF;
     --card-back-color: #696969;
 }
 
